--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   flutter_native_splash: ^2.3.10
   #Storage
   cached_network_image: ^3.3.1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -52,6 +54,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   pretty_dio_logger: ^1.3.1
   build_runner: ^2.4.8
+  hive_generator: ^2.0.1
 
 flutter_native_splash:
   color: "#FFFFFF"
